[tool.poetry]
name = "audar"
version = "0.1.0"
description = ""
authors = ["Konstantinos Dimitriou <constd@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.61.2"
requests = "^2.26.0"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
